--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ left a {
     color: white;
     text-align: center;
     text-decoration: none;
-    padding-top: 110px;
     padding-left: 50px;
+    padding-right: 50px;
 }
 
 left a:hover:not(.active) {
@@ -64,8 +64,8 @@ right a {
     display: block;
     color: white;
     text-align: center;
-    padding-top: 110px;
     padding-right: 50px;
+    padding-left: 50px;
     text-decoration: none;
 }
 
