scroll bar and "nothing" div so the content is under the logo

--- a/style.css
+++ b/style.css
@@ -86,3 +86,35 @@ right a:hover:not(.active) {
 .active {
     background-color: #4CAF50;
 }
+
+.nothing {
+    width: 100%;
+}
+
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
