--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 body {
     background-color: #1f1f1f;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto;
+    font-size: 16px;
 }
 
 .bar-btns {
