--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@ html {
   line-height: 1.4;
 }
 
+body {
+  margin: 0 5rem;
+  font-family: "Nunito Sans", sans-serif;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -263,3 +268,178 @@ textarea {
   }
 }
 
+/* All the sheez above made me cry ;-; */
+
+.borderLeftRight {
+  display: inline-block;
+  position: relative;
+  color: #474e51;
+}
+
+.borderLeftRight::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #3c3444;
+  transform-origin: bottom right;
+  transition: transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.borderLeftRight:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  width: 100%;
+}
+
+nav .logo {
+  width: 4rem;
+  height: 4rem;
+}
+
+nav ul a {
+  margin: 1.5rem;
+}
+
+nav ul a li {
+  list-style: none;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 25px;
+  background-color: rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  transition: all 0.3s;
+}
+
+.switch:after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 18px;
+  background-color: white;
+  top: 2px;
+  left: 3.5px;
+  transition: all 0.3s;
+}
+
+input[type="checkbox"]:checked + .switch:after {
+  transform: translateX(23px);
+}
+
+input[type="checkbox"]:checked + .switch {
+  background-color: #3c3444;
+}
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+
+.pressDown {
+  border: none;
+  background-color: #3c3444;
+  padding: 10px 30px;
+  color: #fff;
+  border-radius: 5px;
+  border-bottom: 4px solid #1e1922;
+  transition: 0.1s;
+  margin-bottom: 10rem;
+}
+
+.pressDown:hover {
+  border-bottom-width: 0;
+  margin-top: 3px;
+}
+
+.arrowBounce {
+  animation: bounce 2s infinite;
+  color: #5778f3;
+  font-size: 22px;
+  position: relative;
+}
+
+.arrowBounce svg {
+  color: #3c3444;
+}
+
+.arrowBounce::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: url("../assets/images/scroll-arrow.svg") no-repeat;
+  height: 26px;
+  width: 18px;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+section.secOne {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  padding-top: 13rem;
+}
+
+section.secOne h1 {
+  margin: 0;
+  font-family: "Quicksand", sans-serif;
+  font-size: 3rem;
+}
+
+section.secOne h3 {
+  margin: 0;
+  margin-bottom: 2rem;
+  font-weight: normal;
+  font-size: 1.5rem;
+}
+
+section.secTwo {
+  margin-top: 15rem;
+  padding: 0 10rem;
+  padding-bottom: 20rem;
+}
+
+section.secTwo h1 {
+  margin-bottom: 0;
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  font-weight: 700;
+  font-family: "Quicksand", sans-serif;
+}
+
+section.secTwo p {
+  font-size: 1.2rem;
+}
