--- a/css/normalize.css
+++ b/css/normalize.css
@@ -13,6 +13,11 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
+a {
+  outline: none;
+  text-decoration: none;
+}
+
 /* Sections
    ========================================================================== */
 
@@ -174,7 +179,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -184,7 +190,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
