--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,26 @@
+:root {
+  --primary-color: #302ae6;
+  --secondary-color: #536390;
+  --font-color: #424242;
+  --bg-color: #eee;
+  --heading-color: #292922;
+  --bg-secondary: #fff;
+}
+
+[data-theme="dark"] {
+  --primary-color: #9a97f3;
+  --secondary-color: #818cab;
+  --font-color: #e1e1ff;
+  --bg-color: #161625;
+  --heading-color: #818cab;
+  --bg-secondary: #212138;
+}
+
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0 5rem;
-  color: #303030;
+  color: var(--font-color);
+  background-color: var(--bg-color);
 }
 
 * {
