--- a/css/blog.css
+++ b/css/blog.css
@@ -37,7 +37,7 @@ article h1 {
   font-family: "Quicksand", sans-serif;
 }
 
-article h1 span {
+.textUnderline {
   box-shadow: inset 0 -0.3em #3c344457;
 }
 
@@ -97,4 +97,28 @@ figcaption {
 .socials img {
   width: 3rem;
   margin: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  :root {
+    font-size: 12px;
+  }
+  body {
+    margin: 0 5%;
+  }
+
+  article {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+    margin-top: 5rem;
+  }
+
+  article p {
+    font-size: 1.8rem;
+  }
+  article h3 {
+    font-size: 1.5rem;
+  }
 }
