--- a/css/index.css
+++ b/css/index.css
@@ -1,92 +1,114 @@
 .pressDown {
-    border: none;
-    background-color: #3c3444;
-    padding: 10px 30px;
-    color: #e1e1ff;
-    border-radius: 5px;
-    border-bottom: 4px solid #1e1922;
-    transition: 0.1s;
-    margin-bottom: 10rem;
+  border: none;
+  background-color: #3c3444;
+  padding: 10px 30px;
+  color: #e1e1ff;
+  border-radius: 5px;
+  border-bottom: 4px solid #1e1922;
+  transition: 0.1s;
+  margin-bottom: 10rem;
+}
+
+.pressDown:hover {
+  border-bottom-width: 0;
+  margin-top: 3px;
+}
+
+.arrowBounce {
+  animation: bounce 2s infinite;
+  color: #e1e1ff;
+  font-size: 22px;
+  position: relative;
+}
+
+.arrowBounce svg {
+  color: var(--font-color);
+}
+
+.arrowBounce::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: url("../assets/images/scroll-arrow.svg") no-repeat;
+  height: 26px;
+  width: 18px;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
   }
-  
-  .pressDown:hover {
-    border-bottom-width: 0;
-    margin-top: 3px;
+  40% {
+    transform: translateY(-30px);
   }
-  
-  .arrowBounce {
-    animation: bounce 2s infinite;
-    color: #e1e1ff;
-    font-size: 22px;
-    position: relative;
+  60% {
+    transform: translateY(-15px);
   }
-  
-  .arrowBounce svg {
-    color: var(--font-color);
+}
+
+section.secOne {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  padding-top: 13rem;
+}
+
+section.secOne h1 {
+  margin: 0;
+  font-family: "Quicksand", sans-serif;
+  font-size: 3rem;
+}
+
+section.secOne h3 {
+  margin: 0;
+  margin-bottom: 2rem;
+  font-weight: normal;
+  font-size: 1.5rem;
+}
+
+section.secTwo {
+  margin-top: 15rem;
+  padding: 0 10rem;
+  padding-bottom: 20rem;
+}
+
+section.secTwo h1 {
+  margin-bottom: 0;
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  font-weight: 700;
+  font-family: "Quicksand", sans-serif;
+}
+
+section.secTwo p {
+  font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  :root {
+    font-size: 12px;
   }
-  
-  .arrowBounce::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: url("../assets/images/scroll-arrow.svg") no-repeat;
-    height: 26px;
-    width: 18px;
+  body {
+    margin: 0 5%;
   }
-  
-  @keyframes bounce {
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-      transform: translateY(0);
-    }
-    40% {
-      transform: translateY(-30px);
-    }
-    60% {
-      transform: translateY(-15px);
-    }
-  }
-  
+
   section.secOne {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    padding-top: 13rem;
+    text-align: center;
+    padding-top: 50%;
   }
-  
-  section.secOne h1 {
-    margin: 0;
-    font-family: "Quicksand", sans-serif;
-    font-size: 3rem;
-  }
-  
-  section.secOne h3 {
-    margin: 0;
-    margin-bottom: 2rem;
-    font-weight: normal;
-    font-size: 1.5rem;
-  }
-  
+
   section.secTwo {
-    margin-top: 15rem;
-    padding: 0 10rem;
-    padding-bottom: 20rem;
+    padding: 1rem;
   }
-  
-  section.secTwo h1 {
-    margin-bottom: 0;
-    font-size: 3rem;
-    margin-bottom: 2rem;
-    font-weight: 700;
-    font-family: "Quicksand", sans-serif;
+  .arrowBounce {
+    margin-top: 5rem;
   }
-  
-  section.secTwo p {
-    font-size: 1.2rem;
-  }
+}
